# pulse

./: Cargo.toml  LICENSE  README.md  build.rs  config.example.toml
scripts/: release.sh
src/: app.rs  config.rs  db.rs  main.rs  site_blocker.rs
src/integrations/: calendar.rs  gitlab.rs  jira.rs  mod.rs  slack.rs  weather.rs
src/models/: focus_session.rs  goal.rs  habit.rs  journal.rs  mod.rs  note.rs  task.rs  weight.rs  workout.rs
src/reports/: mod.rs
src/ui/: daily_start.rs  dashboard.rs  goals.rs  habits.rs  input.rs  logs.rs  markdown.rs  mod.rs  notes.rs  tasks.rs
