[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
color-eyre = "0.6"
urlencoding = "2"
